10/blue-green/ingress-v2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-ingress
  labels:
    part-of: blue-green-demo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: passage-webapp-svc-v2
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: weather-api-svc-v2
            port:
              number: 80
